# mikomi-reader

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
.github/workflows/: release.yml
src/: app.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-07-18-025546_creat_book/: up.sql
src-tauri/migrations/2023-07-25-230833_create_person/: down.sql  up.sql
src-tauri/migrations/2023-08-28-232857_create_bookmark/: down.sql  up.sql
src-tauri/migrations/2023-09-10-165017_create_highlight/: down.sql  up.sql
src-tauri/migrations/2023-09-24-232550_create_book_settings/: down.sql  up.sql
src-tauri/migrations/2023-10-02-203723_add_last_read_column_to_book/: down.sql  up.sql
src-tauri/migrations/2023-10-02-222549_add_last_page_column_to_book_settings/: down.sql  up.sql
src-tauri/migrations/2023-10-03-185031_add_date_added_column_to_book/: down.sql  up.sql
src-tauri/migrations/2023-10-04-032618_create_reading_tags/: down.sql  up.sql
src-tauri/migrations/2023-10-05-193135_add_reading_status_to_book/: down.sql  up.sql
src-tauri/migrations/2023-10-07-180046_add_metadata/: down.sql  up.sql
src-tauri/migrations/2023-10-14-230419_add_sort_order_column_to_collections/: down.sql  up.sql
src-tauri/migrations/2023-11-04-230211_add_sort_order_column_to_book_collection_link/: down.sql  up.sql
src-tauri/src/: db.rs  epub.rs  main.rs  models.rs  schema.rs
src/lib/: bindings.ts
src/lib/cache/: cache.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
(+108 files in other folders)
